<resources>
    <string name="app_name">VGC</string>
    <string name="action_settings">Configuración</string>
    <string name="action_colaboradores">Colaboradores de la VGC</string>
    <string name="action_principal">Página principal</string>
    <string name="action_zonas">Zonas de la VGC</string>
    <string name="action_horarios">Horarios</string>

    <string name="getNotifications">Descargar notificaciones</string>
    <string name="invitadosEvento">Invitados</string>
    <string name="dondeComprar">¿Dónde Puedes Comprar?</string>
    <string name="horarios">Horarios en el envento</string>
    <string name="planoRecinto">Plano del recinto</string>
    <string name="imagenPrincipal">iconoPrincipal</string>
    <string name="title_activity_maps_view">Map</string>
    <string name="action_about">Acerca de</string>
    <string name="title_activity_comprar_fisico">Map</string>
    <string name="button_comprar_fisico">EN TIENDA</string>
    <string name="button_comprar_online">ONLINE</string>
    <string name="button_informacion">Botón de información</string>
    <string name="button_mapa">Cómo llegar</string>
    <string name="button_actividades">Actividades</string>
    <string name="colaboradores">Colaboradores</string>
    <string name="title_activity_informacion">Información</string>
    <string name="twitter_button">Twitter</string>
    <string name="loadingTwits">Loading...</string>
    <string name="text_button_new_twit">           Nuevo Tweet</string>
    <string name="settings">configuración</string>
    <string name="button_reset_notifications">Resetear notificaciones</string>
    <string name="button_horarios_text">Horarios del Evento</string>

    <!-- strings de los lugares de venta-->
    <string name="venta_basic"> Puntos de venta de las entradas para la VGC  pincha sobre ellos para obtener mas información.</string>
    <string name="monograficDesciption"> Tienda de cómics y merchandising Monografic Cómics, situada en el centro de la ciudad de Elche (Alicante).  <br /> Direccion: C/ Porta d\'Alacant n 7, 03202 Elche</string>
    <string name="fnacDesciption">Dirección: Avenida la Estación, 5-7, 03003 Alicante</string>
    <string name="spiderlandDesciption">Dirección: C/ Major del pla 26, 03201,Elche (Alicante)</string>
    <string name="ateneoDesciption">Librería especializada en cómics, literatura fantástica y Sci-fi, juegos de mesa y cartas, merchandising... <br /> Direccion: C/ Serrano, nº 10, 03003 Alicante </string>
    <string name="comixcityDesciption">Comic, manga, europeo, merchandising, magic, yu-gi-oh, warhammer, juegos de mesa,... ¡todo lo que necesites para tu ocio! <br /> Dirección: C/ Serrano, nº 15, 03003 Alicante </string>
    <string name="homelandsDesciption">Tienda Homelands encontrarás juegos de mesa y juegos de cartas coleccionables,además de multitud de figuras de tus series favoritas. <br/> : Dirección: C/ Sant Vicent 19 bajo izquierda, 03202 Elche</string>
    <string name="fnacMDesciption">Dirección: Centro Comercial Nueva Condomina ,Autopista A-7, km 760 30110 Murcia</string>
    <string name="heroes7Description">‘7Heroes’ está en la Calle Alfonso Palazón Clemares, Nº4, 30009. <br /> En Murcia.Frente al McDonald’s del Zig Zag.</string>
    <!-- strings de la activity vgc -->
    <string name="titulo_vgc">Salón del cómic, videojuegos, series de tv, juegos de estrategia, coleccionismo…. y mucho más.</string>
    <string name="primer_parrafo_vgc">El  Salón VIDEO GAME COMIC (VGC) se desarrollará en IFA (Institución Ferial Alicantina) durante los días 26 y 27 de Septiembre de 2015.</string>
    <string name="segundo_parrafo_vgc">Pretendemos que el Salón VGC sea un referente nacional, acogiendo las distintas formas de entretenimiento y arte en tres pilares fundamentales: videojuegos, cómics y juegos de estrategia. Podremos disfrutar de diferentes conferencias en torno a torneos de videojuegos, concursos, exposiciones. Dispondremos de diferentes zonas:</string>
    <string name="zona_gamer_titulo">ZONA GAMER</string>
    <string name="zona_gamer_desc">Aquí podrás descubrir y jugar a las últimas novedades pero también a los clásicos del videojuego. Además se realizarán distintos torneos de los videojuegos más importantes: FIFA, Street Fighter, etc… ¡¡Inscríbete y participa!!</string>
    <string name="zona_conciertos_titulo">ZONA CONCIERTOS</string>
    <string name="zona_conciertos_desc">Para que no tengas ni un minuto de respiro tendremos un escenario principal donde podrás encontrar música en directo, dj, conciertos y, ¡Mucho más!</string>
    <string name="zona_market_titulo">ZONA MARKET</string>
    <string name="zona_market_desc">Aquí podrás encontrar desde las últimas novedades en videojuegos a los clásicos del cómic, merchandising, figuras, juguetes, coleccionismo… y mucho más.</string>
    <string name="zona_hablamos_titulo">ZONA HABLAMOS</string>
    <string name="zona_hablamos_desc">Conferencias, debates y mesas redondas donde autores, críticos, profesionales del sector y cualquier aficionado pueda hablar y escuchar sobre los temas que nos interesan, tratando los mismos con la seriedad y la pasión que se merecen.</string>
    <string name="zona_talleres_titulo">ZONA TALLERES</string>
    <string name="zona_talleres_desc">Espacio dedicado al aprendizaje, donde se realizarán multitud de talleres interesantes: cómo hacer un cómic, autoedición, manualidades, estructuras de guion, pintura de miniaturas, creación de escenarios, dibujo, etc.</string>
    <string name="zona_estrategia_titulo">ZONA ESTRATEGIA</string>
    <string name="zona_estrategia_desc">Conoce y prueba las últimas novedades en juegos que acaban de salir al mercado. También se llevarán a cabo distintos campeonatos de los juegos más importantes: Magic, Heroclix, Dominion, etc…</string>

    <!-- strings de about -->
    <string name="cabecera_about">Aplicacion oficial de la VGC de Alicante 2015</string>
    <string name="version_text">Version:</string>
    <string name="version_number" translatable="false">1.0.2</string>
    <string name="hecho_por_cabecera">Hecho por:</string>
    <string name="jsadevtech">JSA DevTech®</string>

    <!-- strings de actividades_screen -->
    <string name="revision_portafolios">Revision de Portafolios</string>
    <string name="youtubers">Youtubers</string>
    <string name="campeonatos_titulo">CAMPEONATOS</string>
    <string name="concursos_titulo">CONCURSOS</string>
    <string name="torneos_titulo">TORNEOS</string>
    <string name="lan_party_titulo">LAN PARTY</string>
    <string name="campeonatos_magic" translatable="false">Magic</string>
    <string name="campeonatos_infinity" translatable="false">Infinity</string>
    <string name="campeonatos_krosmaster" translatable="false">Krosmaster</string>
    <string name="campeonatos_heroclix" translatable="false">Heroclix</string>
    <string name="campeonatos_dice_master" translatable="false">Dice Master</string>
    <string name="campeonatos_malifaux" translatable="false">Malifaux</string>
    <string name="campeonatos_torneos_demos" translatable="false">Torneos y Demos</string>
    <string name="concursos_cosplay">Cosplay</string>
    <string name="concursos_adivina_cancion">Adivina la cancion</string>
    <string name="concursos_heroe_en_ti">Saca el heroe que hay en ti</string>
    <string name="lan_party_lol5vs5" translatable="false">LoL 5vs5</string>
    <string name="lan_party_lol5vs5_forURL" translatable="false">League of Legends 5vs5</string>
    <string name="lan_party_minecraft" translatable="false">Minecraft</string>
    <string name="lan_party_csgo" translatable="false">CS:GO</string>
    <string name="torneos_USFIV" translatable="false">Ultra Street Fighter IV</string>
    <string name="torneos_SFII" translatable="false">Street Fighter II Champion Edition</string>
    <string name="torneos_SSB" translatable="false">Super Smash Bros</string>
    <string name="torneos_narutoSunsRevolution" translatable="false">Naruto Suns Revolution</string>
    <string name="torneos_mkX" translatable="false">Mortal Kombat X</string>
    <string name="torneos_hearthstone" translatable="false">Hearthstone</string>
    <string name="torneos_fifa15" translatable="false">FIFA15</string>
    <string name="torneos_fusion_freak" translatable="false">Torneos Fusion Freak</string>
    <string name="torneos_tekken" translatable="false">Tekken Tag Tournament 2</string>
    <string name="torneos_saint_seiya" translatable="false">Saint Seiya Soldiers\' Soul</string>
    <string name="torneos_injustice" translatable="false">Injustice Gods Among Us</string>
    <string name="torneos_pokemon" translatable="false">Pokemon</string>


    <!--string de api facebook -->
    <string name="facebook_app_id" translatable="false">1440183462973613</string>

    <!-- strings auxiliares secundarias -->
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_vgc_screen">Vgc_screen</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_actividades_screeen">actividades_screeen</string>
    <string name="title_activity_web_actividades_screen">webActividades_screen</string>
    <string name="title_activity_settings">Configuración</string>
    <string name="switch_button_notificaciones">Notificaciones </string>
    <string name="title_activity_horarios_screen">Horarios</string>

</resources>
