<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:focusable="true"
    android:alpha="0.90"
    android:background="@drawable/fondo">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context=".actividades_screen">

        <!-- Campeonatos -->
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/campeonatos_titulo"
            android:id="@+id/campeonatos_titulo"
            android:textColor="@android:color/black"
            android:textSize="32dp"
            android:textStyle="bold"
            android:background="@android:color/white"
            android:layout_marginLeft="10dp"
            android:gravity="center_horizontal" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/campeonatos_magic"
            android:id="@+id/button_magic"
            android:layout_below="@+id/campeonatos_titulo"
            android:layout_alignParentLeft="true"
            android:textStyle="bold"
            android:textSize="22dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:textColor="@android:color/white"
            android:background="@android:color/black"/>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/campeonatos_infinity"
            android:id="@+id/button_infinity"
            android:layout_alignParentLeft="true"
            android:textStyle="bold"
            android:textSize="22dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="20dp"
            android:layout_below="@id/button_magic"
            android:textColor="@android:color/white"
            android:background="@android:color/black"/>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/campeonatos_krosmaster"
            android:id="@+id/button_krosmaster"
            android:layout_alignParentLeft="true"
            android:textStyle="bold"
            android:textSize="22dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="20dp"
            android:layout_below="@id/button_infinity"
            android:textColor="@android:color/white"
            android:background="@android:color/black"/>

        <!-- Concursos -->
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/concursos_titulo"
            android:id="@+id/concursos_titulo"
            android:textColor="@android:color/black"
            android:textSize="32dp"
            android:textStyle="bold"
            android:background="@android:color/white"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_below="@id/button_krosmaster"
            android:gravity="center_horizontal" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/concursos_cosplay"
            android:id="@+id/button_cosplay"
            android:layout_below="@+id/concursos_titulo"
            android:layout_alignParentLeft="true"
            android:textStyle="bold"
            android:textSize="22dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="20dp"
            android:textColor="@android:color/white"
            android:background="@android:color/black"/>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/concursos_adivina_cancion"
            android:id="@+id/button_adivina_cancion"
            android:layout_alignParentLeft="true"
            android:textStyle="bold"
            android:textSize="22dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="20dp"
            android:layout_below="@id/button_cosplay"
            android:textColor="@android:color/white"
            android:background="@android:color/black"/>

        <!-- Concursos -->
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/lan_party_titulo"
            android:id="@+id/lan_party_titulo"
            android:textColor="@android:color/black"
            android:textSize="32dp"
            android:textStyle="bold"
            android:background="@android:color/white"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_below="@id/button_adivina_cancion"
            android:gravity="center_horizontal" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/lan_party_lol5vs5"
            android:id="@+id/button_lol_5vs5"
            android:layout_below="@+id/lan_party_titulo"
            android:layout_alignParentLeft="true"
            android:textStyle="bold"
            android:textSize="22dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:textColor="@android:color/white"
            android:background="@android:color/black"/>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/lan_party_minecraft"
            android:id="@+id/button_minecraft"
            android:layout_alignParentLeft="true"
            android:textStyle="bold"
            android:textSize="22dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="20dp"
            android:layout_below="@id/button_lol_5vs5"
            android:textColor="@android:color/white"
            android:background="@android:color/black"/>

        <!-- Torneos -->
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/torneos_titulo"
            android:id="@+id/torneos_titulo"
            android:textColor="@android:color/black"
            android:textSize="32dp"
            android:textStyle="bold"
            android:background="@android:color/white"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_below="@id/button_minecraft"
            android:gravity="center_horizontal" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/torneos_USFIV"
            android:id="@+id/button_USFIV"
            android:layout_below="@+id/torneos_titulo"
            android:layout_alignParentLeft="true"
            android:textStyle="bold"
            android:textSize="22dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:textColor="@android:color/white"
            android:background="@android:color/black"/>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/torneos_SFII"
            android:id="@+id/button_SFII"
            android:layout_alignParentLeft="true"
            android:textStyle="bold"
            android:textSize="22dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="20dp"
            android:layout_below="@id/button_USFIV"
            android:textColor="@android:color/white"
            android:background="@android:color/black"/>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/torneos_SSB"
            android:id="@+id/button_SSB"
            android:layout_alignParentLeft="true"
            android:textStyle="bold"
            android:textSize="22dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="20dp"
            android:layout_below="@id/button_SFII"
            android:textColor="@android:color/white"
            android:background="@android:color/black"/>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/torneos_narutoSunsRevolution"
            android:id="@+id/button_narutoSunsRevolution"
            android:layout_alignParentLeft="true"
            android:textStyle="bold"
            android:textSize="22dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="20dp"
            android:layout_below="@id/button_SSB"
            android:textColor="@android:color/white"
            android:background="@android:color/black"/>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/torneos_mkX"
            android:id="@+id/button_mkX"
            android:layout_alignParentLeft="true"
            android:textStyle="bold"
            android:textSize="22dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="20dp"
            android:layout_below="@id/button_narutoSunsRevolution"
            android:textColor="@android:color/white"
            android:background="@android:color/black"/>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/torneos_fusion_freak"
            android:id="@+id/button_toneosFusionFreak"
            android:layout_alignParentLeft="true"
            android:textStyle="bold"
            android:textSize="22dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="20dp"
            android:layout_below="@id/button_mkX"
            android:textColor="@android:color/white"
            android:background="@android:color/black"/>

    </RelativeLayout>
</ScrollView>