
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/fondo">
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".main_screen">


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/getNotifications"
        android:id="@+id/buttonNotifications"
        android:width="@android:dimen/thumbnail_width"
        android:layout_below="@+id/buttonMap"
        android:layout_alignLeft="@+id/buttonPlano"
        android:layout_alignStart="@+id/buttonPlano"
        android:layout_marginTop="25dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/invitadosEvento"
        android:id="@+id/buttonInvitados"
        android:clickable="false"
        android:layout_below="@+id/iconoprincipal"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:width="@android:dimen/thumbnail_width" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/horarios"
        android:id="@+id/buttonHoraio"
        android:layout_below="@+id/buttonInvitados"
        android:layout_alignRight="@+id/buttonComprar"
        android:layout_alignEnd="@+id/buttonComprar"
        android:layout_marginTop="25dp"
        android:width="@android:dimen/thumbnail_width" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dondeComprar"
        android:id="@+id/buttonComprar"
        android:layout_marginTop="25dp"
        android:layout_below="@+id/buttonHoraio"
        android:layout_centerHorizontal="true"
        android:width="@android:dimen/thumbnail_width" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/planoRecinto"
        android:id="@+id/buttonPlano"
        android:layout_below="@+id/buttonComprar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:width="@android:dimen/thumbnail_width" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/iconoprincipal"
        android:src="@drawable/iconoprincipal"
        android:contentDescription="@string/imagenPrincipal"
        android:layout_marginTop="44dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Como Llegar"
        android:id="@+id/buttonMap"
        android:layout_marginTop="25dp"
        android:layout_below="@+id/buttonPlano"
        android:layout_alignLeft="@+id/buttonNotifications"
        android:layout_alignStart="@+id/buttonNotifications"
        android:layout_alignRight="@+id/buttonNotifications"
        android:layout_alignEnd="@+id/buttonNotifications" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Text"
        android:id="@+id/texto"
        android:layout_below="@+id/buttonNotifications"
        android:layout_centerHorizontal="true" />


</RelativeLayout>
</ScrollView>
