<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:focusable="true"
    android:alpha="0.90"
    android:background="@drawable/fondo">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context=".about">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cabecera_about"
            android:id="@+id/cabecera_about"
            android:textSize="32dp"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="80dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/version_text"
            android:id="@+id/version_text"
            android:textSize="24dp"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:layout_below="@+id/cabecera_about"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="15dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/version_number"
            android:id="@+id/version_number"
            android:textSize="24dp"
            android:textColor="@android:color/black"
            android:layout_toRightOf="@+id/version_text"
            android:layout_alignBottom="@+id/version_text"
            android:layout_marginLeft="10dp"
            android:layout_alignParentStart="false" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hecho_por_cabecera"
            android:id="@+id/hecho_por_text"
            android:textSize="24dp"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:layout_below="@+id/version_text"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jsadevtech"
            android:id="@+id/hecho_por_nombre"
            android:textSize="28dp"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:layout_below="@+id/hecho_por_text"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"/>

    </RelativeLayout>

</ScrollView>