<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/scrollView"
    android:layout_alignParentTop="true"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true"
    android:background="@drawable/fondo">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="com.jsadevtech.jsa.vgc.Vgc_screen">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/titulo_vgc"
            android:textStyle= "bold"
            android:textColor="@android:color/black"
            android:textSize= "22dp"
            android:id="@+id/titulo_vgc" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_below="@+id/titulo_vgc"
            android:text="@string/primer_parrafo_vgc"
            android:textColor="@android:color/black"
            android:textSize= "18dp"
            android:id="@+id/primer_parrafo_vgc" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_below="@+id/primer_parrafo_vgc"
            android:text="@string/segundo_parrafo_vgc"
            android:textColor="@android:color/black"
            android:textSize= "18dp"
            android:id="@+id/segundo_parrafo_vgc" />

        <View
            android:id="@+id/separador1_vgc"
            android:layout_below="@+id/segundo_parrafo_vgc"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/black"
            android:layout_marginTop="20dp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_below="@+id/separador1_vgc"
            android:text="@string/zona_gamer_titulo"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:textSize= "18dp"
            android:id="@+id/zona_gamer_titulo" />

        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/zona_vgc"
            android:layout_below="@+id/zona_gamer_titulo">

            <ImageView
                android:layout_width="match_parent"
                android:id="@+id/gamer_logo"
                android:src="@drawable/zona_gamer_logo_nuevo"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_height="match_parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/zona_gamer_desc"
                android:textColor="@android:color/black"
                android:textSize= "15dp"
                android:id="@+id/zona_gamer_desc" />

            </TableLayout>



    </RelativeLayout>


</ScrollView>


